@@ -1,3 +1,15 @@
+2010-06-101  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
+
+	* generic/tclNamesp.c: Fix computation of [uplevel] offsets in TIP 348.
+	* tests/error.test:    Only depend on callerPtr chaining now.
+	* tests/result.test:   Needed for upcoming coro patch.
+
+2010-05-31  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclVar.c         Eliminate some casts to (Tcl_HashTable *)
+	* generic/tclExecute.c
+	* tests/fileSystem.test    Fix filesystem-5.1 test failure on CYGWIN
+
 2010-05-28  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclInt.h:  [tcl-Patches-3008541] order of TIP #348 fields
